feat(index): add meta data for sharing

--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>IP Ingeniería</title>
+
+  <meta name="description"
+    content="IP Ingeniería ofrece soluciones innovadoras de TI, incluyendo diseño de redes, servicios de ciberseguridad, recuperación de datos, y más. Potencia tu presencia digital con nuestras soluciones tecnológicas confiables y escalables.">
+  <!-- Palabras clave para SEO (Nota: Google no las utiliza para clasificación, pero otros motores de búsqueda sí) -->
+  <meta name="keywords"
+    content="servicios de TI, diseño de redes, ciberseguridad, recuperación de datos, desarrollo de software, soluciones tecnológicas, IP Ingeniería">
+    <!-- Etiquetas meta de gráficos abiertos para compartir en redes sociales (Facebook, Twitter, etc.) -->
+    <meta property="og:title" content="IP Ingeniería - Potenciando Tu Futuro Digital">
+    <meta property="og:description" content="Explora una gama de servicios de TI ofrecidos por IP Ingeniería, entregando excelencia en diseño de redes, ciberseguridad, recuperación de datos, y más. Asóciate con nosotros para soluciones tecnológicas confiables y escalables.">
+    <meta property="og:image" content="https://ipingenieria.netlify.app/city.jpeg">
+    <meta property="og:url" content="https://ipingenieria.netlify.app">
+    <meta property="og:type" content="website">
+
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
